--- a/UpdaterClient/CMakeLists.txt
+++ b/UpdaterClient/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.23)
 project(UpdateDemo C)
 include_directories(../includes)
-add_executable(UpdaterClient UpdaterClient.c ../includes/Handler.h Handler.c Request.c)
+add_executable(UpdaterClient UpdaterClient.c ../includes/Handler.h Handler.c Request.c ../includes/Connection.h)
 
 
 
