--- a/messageV1/CMakeLists.txt
+++ b/messageV1/CMakeLists.txt
@@ -3,3 +3,4 @@ project(UpdateDemo C)
 include_directories(../includes)
 add_library(messageV1 SHARED ${LIB_ABI_SOURCES} MessageV1.c)
 
+#add_test(NAME Base_Addr_Check COMMAND "{objdump libmessageV1.so -T | awk '$0 ~ /.*getVersionMessage.*/ {printf "base address:%s\n",$1 }'}")
