Added application trunk handler

--- a/UpdaterService/CMakeLists.txt
+++ b/UpdaterService/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.23)
 project(UpdateDemo C)
 include_directories(../includes)
-add_executable(UpdaterService UpdaterService.c ../includes/Handler.h ../includes/Connection.h)
+add_executable(UpdaterService UpdaterService.c ../includes/Handler.h ../includes/Connection.h Response.c)
