--- a/UpdaterClient/CMakeLists.txt
+++ b/UpdaterClient/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
 project(UpdateDemo C)
 include_directories(../includes)
-add_executable(UpdaterClient UpdaterClient.c ../includes/ClientHandler.h ClientHandler.c Request.c ../includes/Connection.h)
+add_executable(UpdaterClient UpdaterClient.c ClientHandler.c Request.c ../includes/Connection.h)
 
 
