--- a/UpdaterService/CMakeLists.txt
+++ b/UpdaterService/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.23)
 project(UpdateDemo C)
 include_directories(../includes)
-add_executable(UpdaterService UpdaterService.c ../includes/Connection.h Response.c UpdaterService.c ServerHandler.c)
+add_executable(UpdaterService UpdaterService.c ../includes/Connection.h Response.c UpdaterService.c ServerHandler.c VersionSwitch.c)
